syntax = "proto3";

option csharp_namespace = "Grpc.Api";
import "cityweather.proto";
package grpc.api;

// The PinCode service definition.
service WeatherService {
  // Get Pincode
  rpc GetWeather (grpc.contracts.CityWeatherRequest) returns (grpc.contracts.CityWeatherResponse);
  // Note: Use full name for the request and response message types.
}
