syntax = "proto3";

option csharp_namespace = "Grpc.Contracts";
import "weatherData.proto";
package grpc.contracts;

message CityWeatherRequest {
  string city = 1;
}

message CityWeatherResponse {
  string city = 1;
  WeatherData weatherData = 2;
}
